# sp-rtk-base

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.clinerules/: Development Rules.md
.github/workflows/: ci.yml  release.yml
deploy/: README.md  install.sh  sp-rtk-base.service  uninstall.sh  upgrade.sh
docker/ntrip-caster/: Dockerfile  docker-compose.yml  ntrip_caster.py
docs/: Tools for Mass Configuration & Back.md  ci-setup.md  deployment-pi.md  e2e-testing.md  local-ntrip-caster.md  relay-engine-api-spec.md  release-process.md  ublox_gps_webui_planning.md  ui-restructuring-plan.md  zed-f9p-base-station-config-reference.md
docs/monitoring/: README.md  grafana-dashboard-sp-rtk-base.json  larson-base-deployment.md  prometheus-scrape-config.example.yml
docs/monitoring/alloy/: config.alloy.example
docs/monitoring/k8s/: prom-rw-basicauth.sealedsecret.yaml.example  prom-rw-ingressroute.yaml  prom-rw-middleware.yaml  values-overlay-snippet.yaml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/sp_base/: app.py  main.py
src/sp_base/api/: config.py  destinations.py  device.py  events.py  health.py  metrics.py  relay.py  settings.py
src/sp_base/cli/: __init__.py  config_audit.py
src/sp_base/models/: api_models.py  config_models.py
src/sp_base/services/: __init__.py  config_service.py  device_service.py  event_bridge.py  metrics_service.py  relay_service.py
src/sp_base/services/drivers/: __init__.py  base.py  ublox.py
src/sp_base/ui/: __init__.py  layout.py
src/sp_base/ui/components/: __init__.py  status_card.py
src/sp_base/ui/pages/: dashboard.py  gps_config.py  input.py  outputs.py  settings.py  survey.py
src/sp_rtk_base/: __init__.py  app.py  main.py
src/sp_rtk_base/api/: __init__.py  config.py  destinations.py  device.py  events.py  health.py  metrics.py  relay.py  settings.py
src/sp_rtk_base/cli/: __init__.py  config_audit.py
src/sp_rtk_base/models/: __init__.py  api_models.py  config_models.py  device_models.py
src/sp_rtk_base/services/: __init__.py  config_service.py  device_service.py  event_bridge.py  metrics_service.py  relay_service.py
src/sp_rtk_base/services/drivers/: __init__.py  base.py  fake.py  ublox.py
src/sp_rtk_base/ui/: layout.py  validators.py
src/sp_rtk_base/ui/components/: __init__.py  status_card.py
src/sp_rtk_base/ui/pages/: __init__.py  dashboard.py  gps_config.py  input.py  outputs.py  settings.py  survey.py
tests/: __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  test_dashboard_button.py  test_destinations_crud.py  test_device_connection.py  test_gps_config_buttons.py  test_gps_data_flow.py  test_input_buttons.py  test_navigation_smoke.py  test_outputs_buttons.py  test_settings_interaction.py  test_survey_buttons.py  test_survey_cancel.py  test_survey_save_position.py
tests/fixtures/: __init__.py  mock_ntrip_caster.py  tcp_destination_client.py  tcp_source_simulator.py
tests/integration/: __init__.py  conftest.py  test_destination_management.py  test_end_to_end.py  test_ntrip_integration.py
tests/unit/: test_api_config.py  test_api_destinations.py  test_api_device.py  test_api_events.py  test_api_metrics.py  test_api_relay.py  test_api_settings.py  test_app.py  test_app_lifecycle.py  test_base_positions.py  test_cancel_survey_in.py  test_config_models.py  test_config_service.py  test_dashboard_formatters.py  test_device_models.py  test_device_service.py  test_driver_registry.py  test_event_bridge.py  test_fake_driver.py  test_gnss_config.py  test_gps_position.py  test_init_services.py  test_init_services_bt_recovery.py  test_input_page_bt_scan.py  test_install_default_config.py  test_main.py  test_main_signals.py  test_metrics_service.py  test_relay_service.py  test_rtcm_port_config.py  test_ublox_driver.py  test_validators.py
tools/: demo_with_simulator.py  read_gps_config.py  test_hardware_gps.py  test_ntrip_caster.py
